fixed selection colours and refined header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 
 *::selection {
     background-color: var(--pred);
-    color: white;
+    color: var(--cham);
 }
 
 body {
@@ -59,7 +59,7 @@ main {
     width: 100vw;
     height: 120px;
     z-index: 1;
-    padding: 0 18px 0 24px;
+    padding: 0 1em 0 2em;
     box-sizing: border-box;
 
     #title {
@@ -88,7 +88,7 @@ main {
         list-style-type: none;
         justify-content: right;
         align-items: center;
-        gap: 18px;
+        gap: 1rem;
         padding: 0;
 
         a {
@@ -128,6 +128,11 @@ main {
 
         .currentbutton:hover {
             border: 4px solid var(--beige);
+        }
+
+        .currentbutton::selection {
+            background-color: var(--cham);
+            color: var(--pred);
         }
     }
 
@@ -259,13 +264,13 @@ footer {
         color: var(--cham)
     }
 
-}
+    a::selection,
+    p::selection,
+    h2::selection {
+        background-color: var(--cham);
+        color: var(--pred);
+    }
 
-footer a::selection,
-p::selection,
-h2::selection {
-    background-color: var(--cham);
-    color: var(--pred);
 }
 
 @media (max-width: 800px) {
